[package]
authors = ["Simon Harris <simon@pearfalse.com>"]
categories = ["compression"]
description = "An RLE-based encoder and decoder for bit streams."
edition = "2018"
keywords = ["bitstream", "pack", "rle"]
license = "MIT"
name = "bitterlemon"
repository = "https://github.com/pearfalse/bitterlemon"
version = "0.2.4"

[dependencies]
arrayvec = { version = ">= 0.7", default-features = false }

[dev-dependencies]
criterion = "0.5.1"
random = ">= 0.14"

[[bench]]
harness = false
name = "test_encode_round_trip"
